.metadata/.plugins/org.eclipse.cdt.ui/TESTRFID.build.log
18:50:27 **** Incremental Build of configuration Debug for project TESTRFID ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:177:13: error: invalid storage class for function 'MX_SPI1_Init'
  177 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:215:13: error: invalid storage class for function 'MX_GPIO_Init'
  215 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:278:1: error: expected declaration or statement at end of input
  278 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:55:13: warning: 'MX_GPIO_Init' used but never defined
   55 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:56:13: warning: 'MX_SPI1_Init' used but never defined
   56 | static void MX_SPI1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:269:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  269 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:215:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  215 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:177:13: warning: 'MX_SPI1_Init' defined but not used [-Wunused-function]
  177 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:137:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  137 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:50:27 Build Failed. 4 errors, 6 warnings. (took 460ms)

